--- a/player/view/VideoPlayer.fxml
+++ b/player/view/VideoPlayer.fxml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.media.MediaView?>
+<AnchorPane prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="player.controller.VideoPlayerController">
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="player.controller.VideoPlayerController"
-            prefHeight="400.0" prefWidth="600.0">
-    <TextField fx:id="field"/> <Button fx:id="btn" >Hallo</Button>
-
+    <GridPane alignment="CENTER" layoutX="8.0" layoutY="6.0" prefHeight="450.0" prefWidth="600.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="329.23755264282227" vgrow="SOMETIMES"/>
+            <RowConstraints maxHeight="44.52490234375" minHeight="10.0" prefHeight="36.187744140625" vgrow="NEVER"/>
+        </rowConstraints>
+        <MediaView fx:id="mvPlayer" fitHeight="450.0" fitWidth="650.0" GridPane.halignment="CENTER"
+                   GridPane.valignment="CENTER"/>
+        <GridPane alignment="BOTTOM_CENTER" prefHeight="24.0" prefWidth="600.0" GridPane.rowIndex="1">
+            <columnConstraints>
+                <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints maxWidth="-Infinity" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <HBox alignment="CENTER" prefHeight="27.0" prefWidth="200.0" GridPane.columnIndex="1">
+                <Button fx:id="btnPlay" mnemonicParsing="false" onAction="#handlePlay" text="Play"/>
+                <Button mnemonicParsing="false" onAction="#handlePause" text="Pause"/>
+            </HBox>
+        </GridPane>
+    </GridPane>
 </AnchorPane>
