--- a/player/view/VideoPlayer.fxml
+++ b/player/view/VideoPlayer.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.media.*?>
@@ -7,57 +8,41 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.media.MediaView?>
 
-<AnchorPane prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.controller.VideoPlayerController">
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.controller.VideoPlayerController">
    <children>
-       <GridPane alignment="CENTER" layoutX="8.0" layoutY="6.0" prefHeight="450.0" prefWidth="600.0">
-           <columnConstraints>
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-           </columnConstraints>
-           <rowConstraints>
-               <RowConstraints minHeight="10.0" prefHeight="329.23755264282227" vgrow="SOMETIMES" />
-               <RowConstraints maxHeight="44.52490234375" minHeight="10.0" prefHeight="36.187744140625" vgrow="NEVER" />
-           </rowConstraints>
-          <children>
-              <GridPane alignment="BOTTOM_CENTER" prefHeight="24.0" prefWidth="600.0" GridPane.rowIndex="1">
-                  <columnConstraints>
-                      <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints maxWidth="-Infinity" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
-                  </columnConstraints>
-                  <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  </rowConstraints>
-                 <children>
-                     <HBox alignment="CENTER" prefHeight="27.0" prefWidth="200.0" GridPane.columnIndex="1">
-                        <children>
-                            <Button fx:id="btnPlay" mnemonicParsing="false" onAction="#handlePlay" text="Play" />
-                            <Button mnemonicParsing="false" onAction="#handlePause" text="Pause" />
-                        </children>
-                     </HBox>
-                 </children>
-              </GridPane>
-            <VBox prefHeight="200.0" prefWidth="100.0">
+      <BorderPane AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <MenuBar fx:id="mbMenu" nodeOrientation="LEFT_TO_RIGHT" BorderPane.alignment="TOP_CENTER">
+              <menus>
+                <Menu mnemonicParsing="false" text="File">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Open" />
+                        <MenuItem mnemonicParsing="false" text="Save" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Edit">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Add Subtitles" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+         </top>
+         <bottom>
+            <VBox alignment="BOTTOM_CENTER" nodeOrientation="LEFT_TO_RIGHT" BorderPane.alignment="BOTTOM_CENTER">
                <children>
-                  <MenuBar fx:id="mbMenu">
-                    <menus>
-                      <Menu mnemonicParsing="false" text="File">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="Open" />
-                              <MenuItem mnemonicParsing="false" text="Save" />
-                        </items>
-                      </Menu>
-                      <Menu mnemonicParsing="false" text="Edit">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="Add Subtitles" />
-                        </items>
-                      </Menu>
-                    </menus>
-                  </MenuBar>
-                    <MediaView fx:id="mvPlayer" fitHeight="400.0" fitWidth="600.0" />
+                  <Slider fx:id="sldTime" blockIncrement="1.0" majorTickUnit="1.0" minorTickCount="1" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#handleSliderChanged" />
+                      <Button fx:id="btnPlay" mnemonicParsing="false" onAction="#handlePlay" text="Play" />
                </children>
+               <BorderPane.margin>
+                  <Insets left="5.0" right="5.0" />
+               </BorderPane.margin>
             </VBox>
-          </children>
-       </GridPane>
+         </bottom>
+         <center>
+              <MediaView fx:id="mvPlayer" onMouseClicked="#handleState" BorderPane.alignment="TOP_LEFT" />
+         </center>
+      </BorderPane>
    </children>
 
 </AnchorPane>
